syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.unogame.uno_backend.grpc";
option java_outer_classname = "UnoProto";

service UnoService {
    rpc JoinGame(JoinRequest) returns (JoinResponse);
    rpc StartGame(StartGameRequest) returns (StartGameResponse); 
    rpc PlayCard(stream PlayRequest) returns (stream PlayResponse);
    rpc GameState(GameStateRequest) returns (stream GameStateResponse);
}

// --- Requests & Responses ---

message JoinRequest {
    repeated string playerNames = 1;
    string gameId = 2;
}

message StartGameRequest {
    string gameId = 1;
}

message StartGameResponse {
    string message = 1;
}

message PlayerInfo {
    string id = 1;
    string name = 2;
    repeated Card hand = 3;  // Player's hand as list of Card
}

message JoinResponse {
    string message = 1; 
    string gameId = 2;
    repeated PlayerInfo allPlayerIds = 3;   // All players currently in the game
    repeated PlayerInfo newPlayerIds = 4;   // Newly joined players in this request   
}

message PlayRequest {
    string gameId = 1;
    string playerId = 2;
    Card card = 3;  
}

message PlayResponse {
    string message = 1;
    string nextPlayerId = 2;
    PlayStatus status = 3;
}

message GameStateRequest {
    string gameId = 1;
}

message GameStateResponse {
    string gameId = 1;
    repeated PlayerInfo players = 2;
    repeated Card cardsOnTable = 3;        
    string currentPlayerId = 4;
    PlayStatus lastMoveStatus = 5;
    string lastMoveInfo = 6;               
}

message Card {
  string color = 1;
  string value = 2;
}

enum PlayStatus {
    OK = 0;
    INVALID_TURN = 1;
    INVALID_PLAYER = 2;
    GAME_NOT_FOUND = 3;
}
